# RemoteDeploymentManager

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.MD  SECURITY.md  project_info.json  pyproject.toml  run_tests.sh  setup.sh
docs/: RemoteDeploymentManager.html
researchs/chatgpt/: research.chatgpt.chat_link.txt  research.chatgpt.prompt.md  research.chatgpt.result.md  research.chatgpt.sources.md
researchs/deepseek/: research.deepseek.chat_link.txt  research.deepseek.prompt.md  research.deepseek.result.md  research.deepseek.sources.md
researchs/gemini-fast/: research.gemini-fast.chat_link.txt  research.gemini-fast.prompt.md  research.gemini-fast.result.md  research.gemini-fast.sources.md
researchs/gemini-pro/: research.gemini-pro.chat_link.txt  research.gemini-pro.prompt.md  research.gemini-pro.result.md  research.gemini-pro.sources.md
specs/: api_endpoints.md  deployment_schema.yaml  hardware_requirements.json
src/src/validators/: __init__.py
src/src/validators/src/validators/: config_check.py
src/tests/: __init__.py  canary_logs.json  test_full_pipeline.py
